...
    @State private var model = CreateFamilyModel()
    @FocusState private var fieldFocused: Bool

    var body: some View {
        Form {
            Section {
                TextField("The Smiths", text: Bindable(model).name)
                    #if os(iOS)
                    .textInputAutocapitalization(.words)
                    #endif
                    .focused($fieldFocused)
                    .submitLabel(.go)
                    .onSubmit { if model.canSubmit { submit() } }
...
